Added TextBox style and .gitignore file

--- a/MyStatWpf/MyStatWpf.csproj
+++ b/MyStatWpf/MyStatWpf.csproj
@@ -108,6 +108,10 @@
     <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Styles\ControlStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\LoginView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
