--- a/MyStatWpf/MyStatWpf.csproj
+++ b/MyStatWpf/MyStatWpf.csproj
@@ -108,7 +108,11 @@
     <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Styles\ControlStyles.xaml">
+    <Page Include="Styles\Controls.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Helpers.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
