--- a/MyStatWpf/packages.config
+++ b/MyStatWpf/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net472" />
 </packages>
