--- a/MyStatWpf/packages.config
+++ b/MyStatWpf/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
 </packages>
